--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.mariadb.jdbc</groupId>
+		    <artifactId>mariadb-java-client</artifactId>
+	    	<version>2.6.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
