--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+spring.datasource.url=jdbc:mariadb://localhost:3306/alura
 
+spring.datasource.username=root
+spring.datasource.password=gabriel
+
+spring.datasource.testWhileIdle=true 
+spring.datasource.validationQuery=SELECT 1
+
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+spring.jpa.show-sql=false 
+spring.jpa.hibernate.ddl-auto=update 
+spring.jpa.hibernate.naming.naming-strategy=org.hibernate.cfg.ImproveNamingStrategy 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
